--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -2,12 +2,37 @@
 <form action="">
     <img src="assets/cliente.png" alt="">
 
-    <input type="text" placeholder="Nome" class="form-control" />
-    <input type="number" placeholder="Idade" class="form-control" />
-    <input type="text" placeholder="Cidade" class="form-control" />
+    <input type="text" placeholder="Nome" class="form-control" name="nome" [(ngModel)]="cliente.nome"/>
+    <input type="number" placeholder="Idade" class="form-control" name="idade" [(ngModel)]="cliente.idade"/>
+    <input type="text" placeholder="Cidade" class="form-control" name="cidade" [(ngModel)]="cliente.cidade"/>
 
-    <input type="button" value="Cadastrar" class="btn btn-primary" />
-    <input type="button" value="Alterar" class="btn btn-warning" />
-    <input type="button" value="Remover" class="btn btn-danger" />
-    <input type="button" value="Cancelar" class="btn btn-secondary" />
+    <input type="button" value="Cadastrar" *ngIf="btnCadastro" class="btn btn-primary" />
+    <input type="button" value="Alterar" *ngIf="!btnCadastro" class="btn btn-warning" />
+    <input type="button" value="Remover" *ngIf="!btnCadastro" class="btn btn-danger" />
+    <input type="button" value="Cancelar" *ngIf="!btnCadastro" class="btn btn-secondary" />
 </form>
+
+<h1>{{ cliente | json }}</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Nome</th>
+            <th>Idade</th>
+            <th>Cidade</th>
+            <th>Selecionar</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let cliente of clientes; index as i">
+            <td>{{ i + 1 }}</td>
+            <td>{{ cliente.nome }}</td>
+            <td>{{ cliente.idade }}</td>
+            <td>{{ cliente.cidade }}</td>
+            <td>
+                <button class="btn btn-success">Selecionar</button>
+            </td>
+        </tr>
+    </tbody>
+</table>
